--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,15 +1,24 @@
 cmake_minimum_required(VERSION 2.6)
 
-set(PROJECT_DIR ../)	
+set(SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/)
+set(PROJECT_DIR ../)
 
 file(GLOB INCLUDE_DIRS
 	"${PROJECT_DIR}app/*/"
 )
 
+# set(CMAKE_CXX_IMPLICIT_LINK_LIBRARIES "${GTEST_LIBRARIES} std")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} \
+		-lstdc++ \
+		-ldl \
+		-lmysqlcppconn \
+		/usr/lib/libcgicc.a \
+		${SRC_DIR}../lib/segvcatch/lib/libsegvcatch.a")
+
 # Locate GTest
 find_package(GTest REQUIRED)
 include_directories(${GTEST_INCLUDE_DIRS} ${PROJECT_DIR} ${INCLUDE_DIRS})
- 
+
 file(GLOB TEST_SOURCE_FILES
 	"*Test.cpp"
 )
